--- a/permission/src/main/AndroidManifest.xml
+++ b/permission/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
 
     <application >
 
-        <activity android:name=".PermissionActivity" />
+        <activity android:name=".PermissionActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:launchMode="standard"
+            android:theme="@style/permission_PermissionActivity"
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden"/>
 
     </application>
 </manifest>
